added topics to proceedings

--- a/proceedings/jet_sub.tex
+++ b/proceedings/jet_sub.tex
@@ -12,10 +12,19 @@ Short abstract
 
 \subsection{Introduction}
 
+\subsection{Quark / gluon tagging at work}
+
+\subsection{Monte Carlo tuning with jet substructure observables}
+
+\subsubsection{The gluon PDF}
+
+\subsubsection{VBF and VBS}
+
+
 
 \subsection*{Acknowledgments}
 
-We thank the participants of Les Houches 2017 for a lively environment and useful discussions.
+We thank the participants of Les Houches 2019 for a lively environment and useful discussions.
 %
 The work of GS is supported in part by the French Agence Nationale de la Recherche,
 under grant ANR-15-CE31-0016, and by the ERC Advanced Grant Higgs@LHC
