added some names and rearranged / added content

--- a/proceedings/jet_sub.tex
+++ b/proceedings/jet_sub.tex
@@ -6,7 +6,7 @@
 
 \begin{document}
 
-\section{JET STUDIES\protect\footnote{Section coordinators: S.~Marzani and B.~Nachman}$^{,}$~\protect\footnote{Contributing authors: PLEASE ADD YOURSELF!}}
+\section{JET STUDIES\protect\footnote{Section coordinators: S.~Marzani and B.~Nachman}$^{,}$~\protect\footnote{Contributing authors: H.~Brooks, P.~Gras, Y.~Haddad, M.~LeBlanc, P.~Loch, K.~Long, E.~Metodiev, D.~Napoletano, S.~Prestel, P.~Richardson, J.~Roloff, G.~Soyez, ...(to be completed!)}}
 
 Short abstract
 
@@ -14,13 +14,17 @@ Short abstract
 
 \subsection{Quark / gluon tagging at work}
 
-\subsection{Monte Carlo tuning with jet substructure observables}
-
 \subsubsection{The gluon PDF}
 
 \subsubsection{VBF and VBS}
 
+\subsection{Monte Carlo tuning with jet substructure observables}
 
+\subsubsection{Probing higher-order effects in PSMC}
+
+\subsubsection{Non-Perturbative effects at low jet mass}
+
+\subsubsection{Jet pull}
 
 \subsection*{Acknowledgments}
 
