--- a/proceedings/jet_sub.tex
+++ b/proceedings/jet_sub.tex
@@ -14,7 +14,7 @@ Short abstract
 
 \subsection{Quark / gluon tagging at work}
 
-\subsubsection{The gluon PDF}
+\subsubsection{The gluon PDF (a.k.a Suppressing the QUark in the Region of RElative Large-x}
 
 \subsubsection{VBF and VBS}
 
@@ -29,13 +29,10 @@ Short abstract
 \subsection*{Acknowledgments}
 
 We thank the participants of Les Houches 2019 for a lively environment and useful discussions.
-%
-The work of GS is supported in part by the French Agence Nationale de la Recherche,
-under grant ANR-15-CE31-0016, and by the ERC Advanced Grant Higgs@LHC
-(No.\ 321133).
-%
+%%
 BN is supported in part by the Office of High Energy Physics of the U.S. Department of Energy under Contract No. DE-AC02-05CH11231.
 %
+SM is also supported by the curiosity-driven grant "Using jets to challenge the Standard Model of particle physics" from Universit\`a di Genova.
 
 \bibliography{lh2019_jets}
 
