added sections and names to proceedings draft

--- a/proceedings/jet_sub.tex
+++ b/proceedings/jet_sub.tex
@@ -11,20 +11,35 @@
 Short abstract
 
 \subsection{Introduction}
+(Ben)
 
-\subsection{Quark / gluon tagging at work}
-
-\subsubsection{The gluon PDF (a.k.a Suppressing the QUark in the Region of RElative Large-x}
-
-\subsubsection{VBF and VBS}
-
+\subsection{Non-Perturbative effects at low jet mass}
+(Ben, Simone, Jennifer, Eric, Vincent, Helen)
 \subsection{Monte Carlo tuning with jet substructure observables}
-
-\subsubsection{Probing higher-order effects in PSMC}
-
-\subsubsection{Non-Perturbative effects at low jet mass}
-
+(Simone, Jennifer, Matt)
 \subsubsection{Jet pull}
+(Helen, Vincent, , Peter R)
+
+\subsection{Probing higher-order effects in PSMC}
+(Ben, Eric, Stefan Prestel)
+\subsubsection{$g\to b \bar b$}
+(Helen, Davide)
+
+
+\subsection{q/g tagging in VBF and VBS}
+(Ben, Yachine, Kenneth, Paolo)
+
+\subsection{The gluon PDF (a.k.a Suppressing the QUark in the Region of RElative Large-x)}
+(Simone, Gregory, Eric)
+\subsection{Conclusion and Outlook}
+(Simone)
+
+
+
+
+
+
+
 
 \subsection*{Acknowledgments}
 
