--- a/proceedings/lh2019.bib
+++ b/proceedings/lh2019.bib
@@ -5,6 +5,174 @@
 
 
 %% Saved with string encoding Unicode (UTF-8) 
+
+
+
+@article{Dulat:2015mca,
+      author         = "Dulat, Sayipjamal and Hou, Tie-Jiun and Gao, Jun and
+                        Guzzi, Marco and Huston, Joey and Nadolsky, Pavel and
+                        Pumplin, Jon and Schmidt, Carl and Stump, Daniel and Yuan,
+                        C. P.",
+      title          = "{New parton distribution functions from a global analysis
+                        of quantum chromodynamics}",
+      journal        = "Phys. Rev.",
+      volume         = "D93",
+      year           = "2016",
+      number         = "3",
+      pages          = "033006",
+      doi            = "10.1103/PhysRevD.93.033006",
+      eprint         = "1506.07443",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1506.07443;%%"
+}
+
+@article{Accardi:2014qda,
+      author         = "Accardi, Alberto and Anderle, Daniele P. and Ringer,
+                        Felix",
+      title          = "{Interplay of Threshold Resummation and Hadron Mass
+                        Corrections in Deep Inelastic Processes}",
+      journal        = "Phys. Rev.",
+      volume         = "D91",
+      year           = "2015",
+      number         = "3",
+      pages          = "034008",
+      doi            = "10.1103/PhysRevD.91.034008",
+      eprint         = "1411.3649",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "JLAB-THY-15-2003",
+      SLACcitation   = "%%CITATION = ARXIV:1411.3649;%%"
+}
+
+
+@inproceedings{Badger:2016bpw,
+      author         = "Andersen, J. R. and others",
+      title          = "{Les Houches 2015: Physics at TeV Colliders Standard
+                        Model Working Group Report}",
+      booktitle      = "{9th Les Houches Workshop on Physics at TeV Colliders
+                        (PhysTeV 2015) Les Houches, France, June 1-19, 2015}",
+      url            = "http://lss.fnal.gov/archive/2016/conf/fermilab-conf-16-175-ppd-t.pdf",
+      year           = "2016",
+      eprint         = "1605.04692",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "FERMILAB-CONF-16-175-PPD-T",
+      SLACcitation   = "%%CITATION = ARXIV:1605.04692;%%"
+}
+
+
+@inproceedings{Sato:2013wea,
+      author         = "Sato, Nobuo",
+      title          = "{Threshold resummation in direct photon production and
+                        its implications on the large-x gluon PDF}",
+      booktitle      = "{Meeting of the APS Division of Particles and Fields (DPF
+                        2013) Santa Cruz, California, USA, August 13-17, 2013}",
+      year           = "2013",
+      eprint         = "1309.7995",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1309.7995;%%"
+}
+
+@article{Corcella:2005us,
+      author         = "Corcella, Gennaro and Magnea, Lorenzo",
+      title          = "{Soft-gluon resummation effects on parton distributions}",
+      journal        = "Phys. Rev.",
+      volume         = "D72",
+      year           = "2005",
+      pages          = "074017",
+      doi            = "10.1103/PhysRevD.72.074017",
+      eprint         = "hep-ph/0506278",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "CERN-PH-TH-2005-090, DFTT-15-2005",
+      SLACcitation   = "%%CITATION = HEP-PH/0506278;%%"
+}
+
+@inproceedings{Westmark:2013vea,
+      author         = "Westmark, David",
+      title          = "{Threshold Resummation and the Determinations of Parton
+                        Distribution Functions}",
+      booktitle      = "{Meeting of the APS Division of Particles and Fields (DPF
+                        2013) Santa Cruz, California, USA, August 13-17, 2013}",
+      year           = "2013",
+      eprint         = "1309.7989",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1309.7989;%%"
+}
+
+
+
+@article{Bonvini:2015ira,
+      author         = "Bonvini, Marco and Marzani, Simone and Rojo, Juan and
+                        Rottoli, Luca and Ubiali, Maria and Ball, Richard D. and
+                        Bertone, Valerio and Carrazza, Stefano and Hartland,
+                        Nathan P.",
+      title          = "{Parton distributions with threshold resummation}",
+      journal        = "JHEP",
+      volume         = "09",
+      year           = "2015",
+      pages          = "191",
+      doi            = "10.1007/JHEP09(2015)191",
+      eprint         = "1507.01006",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "OUTP-15-03P, MIT-CTP-4657, CAVENDISH-HEP-15-02,
+                        CERN-PH-TH-2015-060, EDINBURGH-2015-04, TIF-UNIMI-2015-6",
+      SLACcitation   = "%%CITATION = ARXIV:1507.01006;%%"
+}
+
+
+
+@article{Harland-Lang:2018bxd,
+      author         = "Harland-Lang, L. A. and Thorne, R. S.",
+      title          = "{On the Consistent Use of Scale Variations in PDF Fits
+                        and Predictions}",
+      journal        = "Eur. Phys. J.",
+      volume         = "C79",
+      year           = "2019",
+      number         = "3",
+      pages          = "225",
+      doi            = "10.1140/epjc/s10052-019-6731-6",
+      eprint         = "1811.08434",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1811.08434;%%"
+}
+
+@article{AbdulKhalek:2019ihb,
+      author         = "Abdul Khalek, Rabah and others",
+      title          = "{Parton Distributions with Theory Uncertainties: General
+                        Formalism and First Phenomenological Studies}",
+      collaboration  = "NNPDF",
+      year           = "2019",
+      eprint         = "1906.10698",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "Edinburgh 2019/9, Nikhef/2019-014, TIF-UNIMI-2019-9
+                        DAMTP-2019-24,
+  CAVENDISH-HEP-19-11",
+      SLACcitation   = "%%CITATION = ARXIV:1906.10698;%%"
+}
+
+
+@article{AbdulKhalek:2019bux,
+      author         = "Abdul Khalek, Rabah and others",
+      title          = "{A First Determination of Parton Distributions with
+                        Theoretical Uncertainties}",
+      collaboration  = "NNPDF",
+      year           = "2019",
+      eprint         = "1905.04311",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "CAVENDISH-HEP-19-07, DAMTP-2019-20, Edinburgh 2019/07,
+                        Nikhef
+  2019-013, TIF-UNIMI-2019-4",
+      SLACcitation   = "%%CITATION = ARXIV:1905.04311;%%"
+}
+
 @article{Harland-Lang:2014zoa,
       author         = "Harland-Lang, L. A. and Martin, A. D. and Motylinski, P.
                         and Thorne, R. S.",
