some slow progress on gluon PDF

--- a/proceedings/gluon_pdf.tex
+++ b/proceedings/gluon_pdf.tex
@@ -7,7 +7,7 @@ The non-perturbative nature of PDFs hampers their determination from first princ
 %
 However, for inclusive enough processes, they are universal, i.e.\, up to power corrections, they do not depend on the particular process, and they can be determined by fitting data from previous experiments. Moreover, although they are themselves non-perturbative objects, their dependence on the energy is governed by the DGLAP equation and the evolution kernels can be computed as a power expansion in the strong coupling. This implies that data collected at past experiments, at different energies, can be used to constrain PDFs. 
 
-Traditionally, the main source of uncertainties in the determination of PDFs arises from the experimental error of the data that enter the fit.~\footnote{Very recently, the inclusion of theory uncertainties in PDF determination has also been achieved~\cite{Harland-Lang:2018bxd,AbdulKhalek:2019ihb,AbdulKhalek:2019bux}} In extreme regions of phase-space, for instance at small- or large-$x$, the experimental uncertainties typically deteriorate and one has to face a reduced number of data points. This is reflected in PDFs which are largely unconstrained in these regions. 
+Traditionally, the main source of uncertainties assigned to the determination of PDFs arises from the experimental error of the data that enter the fit.~\footnote{Very recently, the inclusion of theory uncertainties in PDF determination has also been achieved~\cite{Harland-Lang:2018bxd,AbdulKhalek:2019ihb,AbdulKhalek:2019bux}} In extreme regions of phase-space, for instance at small- or large-$x$, the experimental uncertainties typically deteriorate and one has to face a reduced number of data points. This is reflected in PDFs which are largely unconstrained in these regions. 
 %
 For instance, the large PDF uncertainty in the $x\to 1$ region has a negative impact on searches for new and heavy states.
 %
@@ -27,7 +27,7 @@ Ideally, we would like to exploit the vast jet samples collected by the LHC expe
 \begin{center}
 \includegraphics[width=0.49\textwidth, page=9]{figs/fractions.pdf} \hfill
 \includegraphics[width=0.49\textwidth, page=10]{figs/fractions.pdf}
-\caption{}
+\caption{Born-level studies of the flavour composition of dijet events at $\sqrt{s}=13$~TeV, as a function of the jet transverse momentum. The plot on the left shows the fractions of quark-initiated and gluon-initiated processes that contribute to a $gg$ final state. The plot of the right instead shows the fractional composition of the final state for any initial state.}
 \label{fig:born_studies} 
 \end{center}
 \end{figure}
@@ -52,6 +52,25 @@ With the same Born-level setup, we can study how the different partonic final st
 \label{fig:pdf_unc_studies} 
 \end{center}
 \end{figure}
+
+The next step in our study is to evaluate the current PDF uncertainties, as a function of the final-state flavour composition. 
+%
+In order to do so, we imagine as a fist step to have at our disposal an idealised tagging procedure that allows us to freely enhance or depress the different partonic components of the final state. We will come back to actual realisations of this tagger later. 
+%
+In this context, we find useful to define the gluon-gluon ($gg$) purity as
+\begin{equation}
+gg \, \text{purity}= \frac{\sigma_{gg}}{\sigma_{qq}+\sigma_{qg}+\sigma_{gg}},
+\end{equation}
+where $\sigma_{ij}$ is the cross section for producing parton $i$ and $j$, evaluated at Born level.  In an analogous way, we can also define the $q q$ contamination is defined analogously, while $q g$ is then fixed by unitarity. Then, for given values $gg$ purity and $qq$ contamination we can evaluate the PDF uncertainty on the cross section.
+%
+ We decide to perform this estimate using the NNLO PDF set from NNPDF3.1~\cite{Ball:2017nwa} for jets at $2$~TeV.
+ %
+%The results are shown in Fig.~\ref{fig:pdf_unc_studies}, on the left. 
+%
+We actually already know from Fig.~\ref{fig:born_studies}, that in the inclusive, i.e.\ untagged, case correspond to $gg$ purity of the order 5\% at $p_t=2$~TeV, while $qq$ and $qg$ makes up roughly 55\% and 40\% of the inclusive sample, respectively. 
+%
+From the left-hand plot on Fig.~\ref{fig:pdf_unc_studies}, we can then read-off the PDF uncertainty to be of the order of a few percent. This is reflects the fact that the quark parton densities are fairly-well constrained in the region of interest. 
+As we move to higher values of the $gg$ purity, the less constrained gluon PDFs start to play a more significant role and, as a consequence, the overall uncertainties goes up. For instance, if we were able to devise a tagger that purifies the $gg$ final state to 80\%, we would increase the PDF uncertainty from 2\% to 12\%. 
 
 
 \begin{figure}
