--- a/proceedings/lh2019.bib
+++ b/proceedings/lh2019.bib
@@ -5,7 +5,23 @@
 
 
 %% Saved with string encoding Unicode (UTF-8) 
-
+@article{Ball:2017nwa,
+      author         = "Ball, Richard D. and others",
+      title          = "{Parton distributions from high-precision collider data}",
+      collaboration  = "NNPDF",
+      journal        = "Eur. Phys. J.",
+      volume         = "C77",
+      year           = "2017",
+      number         = "10",
+      pages          = "663",
+      doi            = "10.1140/epjc/s10052-017-5199-5",
+      eprint         = "1706.00428",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "CAVENDISH-HEP-17-06, CERN-TH-2017-077, EDINBURGH-2017-08,
+                        NIKHEF-2017-006, OUTP-17-04P, TIF-UNIMI-2017-3",
+      SLACcitation   = "%%CITATION = ARXIV:1706.00428;%%"
+}
 
 
 @article{Dulat:2015mca,
