--- a/proceedings/jet_sub.tex
+++ b/proceedings/jet_sub.tex
@@ -2,6 +2,7 @@
 \usepackage{graphicx,epsfig}
 \bibliographystyle{lesHouches}
 
+\usepackage{cite}
 \usepackage{amsmath}
 
 \newcommand{\GeV}{\,\mathrm{GeV}}
@@ -53,41 +54,40 @@
 
 \begin{document}
 
-\section{JET STUDIES\protect\footnote{Section coordinators: S.~Marzani and B.~Nachman}$^{,}$~\protect\footnote{Contributing authors: H.~Brooks, P.~Gras, Y.~Haddad, M.~LeBlanc, P.~Loch, K.~Long, E.~Metodiev, D.~Napoletano, S.~Prestel, P.~Richardson, J.~Roloff, G.~Soyez, ...(to be completed!)}}
+\section{Jet Studies: Four decades of gluons\protect\footnote{Section coordinators: S.~Marzani and B.~Nachman}$^{,}$~\protect\footnote{Contributing authors: S.~Amoroso, P.~Azzurri, H.~Brooks, S.~Forte, P.~Gras, Y.~Haddad, J.~Huston, A.~Larkoski, M.~Le Blanc, P.~Loch, K.~Long, E.~Metodiev, D.~Napoletano, S.~Prestel, P.~Richardson, F.~Ringer, J.~Roloff, D.~Soper, G.~Soyez, V.~Theeuwes}}
 
-Short abstract
+Studies related to gluon jets have played a key role in particle and nuclear physics since their discovery at PETRA exactly \textbf{four decades} prior to the 2019 Les Houches workshop.  This section investigates gluon fragmentation at the LHC, covering nearly \textbf{four decades} in energy scales.  Low energy scales involving gluon (sub)jets are studied from the point of view of hadronization and Monte Carlo tuning.  Higher-order effects in parton shower programs are investigated using deep learning.  Gluon jet rejection is considered in the context of vector boson fusion/scattering processes.  One of the main studies at this Les Houches was a study about the usefulness of a gluon jet differential cross section measurement in the context of parton distribution functions.  Gluon jet identification was also briefly discussed for searches at the highest energies accessible at the LHC.
 
 \subsection{Introduction}
 (Ben)
 
+Discovery of the gluon~\cite{Brandelik:1979bd,Barber:1979yr,Berger:1979cj,Bartel:1979ut,Ellis:2014rma}.  Previous Les Houches reports on jets in 2017~\cite{Bendavid:2018nar} and 2015~\cite{Badger:2016bpw,Gras:2017jty}.  Reviews on jet substructure~\cite{Asquith:2018igt,Larkoski:2017jix}.
+
 \subsection{Non-Perturbative effects at low jet mass}
 (Ben, Simone, Jennifer, Eric, Vincent, Helen)
+
 \subsection{Monte Carlo tuning with jet substructure observables}
 (Simone, Jennifer, Matt)
+
 \subsubsection{Jet pull}
 (Helen, Vincent, , Peter R)
 
 \subsection{Probing higher-order effects in PSMC}
 (Ben, Eric, Stefan Prestel)
-\subsubsection{$g\to b \bar b$}
-(Helen, Davide)
-
 
 \subsection{q/g tagging in VBF and VBS}
 (Ben, Yachine, Kenneth, Paolo)
 
+\subsubsection{$g\to b \bar b$}
+(Helen, Davide)
+
 \input{gluon_pdf.tex}
 
+\subsubsection{The highest energy gluons at the LHC}
+(Ben)
 
 \subsection{Conclusion and Outlook}
 (Simone)
-
-
-
-
-
-
-
 
 \subsection*{Acknowledgments}
 
