--- a/proceedings/lh2019.bib
+++ b/proceedings/lh2019.bib
@@ -1,7 +1,147 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Ian Moult at 2018-02-03 00:44:34 -0800 
+@article{Asquith:2018igt,
+      author         = "Kogler, Roman and others",
+      title          = "{Jet Substructure at the Large Hadron Collider:
+                        Experimental Review}",
+      journal        = "Rev. Mod. Phys.",
+      volume         = "91",
+      year           = "2019",
+      number         = "4",
+      pages          = "045003",
+      doi            = "10.1103/RevModPhys.91.045003",
+      eprint         = "1803.06991",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "FERMILAB-PUB-18-123-PPD",
+      SLACcitation   = "%%CITATION = ARXIV:1803.06991;%%"
+}
+@article{Larkoski:2017jix,
+      author         = "Larkoski, Andrew J. and Moult, Ian and Nachman, Benjamin",
+      title          = "{Jet Substructure at the Large Hadron Collider: A Review
+                        of Recent Advances in Theory and Machine Learning}",
+      doi            = "10.1016/j.physrep.2019.11.001",
+      year           = "2017",
+      eprint         = "1709.04464",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1709.04464;%%"
+}
+
+@article{Gras:2017jty,
+      author         = "Gras, Philippe and Hoche, Stefan and Kar, Deepak and
+                        Larkoski, Andrew and Lonnblad, Leif and Platzer, Simon
+                        and Siodmok, Andrzej and Skands, Peter and Soyez, Gregory
+                        and Thaler, Jesse",
+      title          = "{Systematics of quark/gluon tagging}",
+      journal        = "JHEP",
+      volume         = "07",
+      year           = "2017",
+      pages          = "091",
+      doi            = "10.1007/JHEP07(2017)091",
+      eprint         = "1704.03878",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "MIT-CTP-4885, COEPP-MN-17-2, MCNET-17-04",
+      SLACcitation   = "%%CITATION = ARXIV:1704.03878;%%"
+}
+
+@inproceedings{Badger:2016bpw,
+      author         = "Andersen, J. R. and others",
+      title          = "{Les Houches 2015: Physics at TeV Colliders Standard
+                        Model Working Group Report}",
+      booktitle      = "{9th Les Houches Workshop on Physics at TeV Colliders
+                        (PhysTeV 2015) Les Houches, France, June 1-19, 2015}",
+      url            = "http://lss.fnal.gov/archive/2016/conf/fermilab-conf-16-175-ppd-t.pdf",
+      year           = "2016",
+      eprint         = "1605.04692",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "FERMILAB-CONF-16-175-PPD-T",
+      SLACcitation   = "%%CITATION = ARXIV:1605.04692;%%"
+}
+
+@proceedings{Bendavid:2018nar,
+      author         = "Andersen, J. R. and others",
+      title          = "{Les Houches 2017: Physics at TeV Colliders Standard
+                        Model Working Group Report}",
+      url            = "http://lss.fnal.gov/archive/2018/conf/fermilab-conf-18-122-cd-t.pdf",
+      year           = "2018",
+      eprint         = "1803.07977",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "FERMILAB-CONF-18-122-CD-T, UWTHPH-2018-5",
+      SLACcitation   = "%%CITATION = ARXIV:1803.07977;%%"
+}
+
+@article{Ellis:2014rma,
+      author         = "Ellis, John",
+      title          = "{The Discovery of the Gluon}",
+      journal        = "Int. J. Mod. Phys.",
+      volume         = "A29",
+      year           = "2014",
+      number         = "31",
+      pages          = "1430072",
+      doi            = "10.1142/9789814618113_0012, 10.1142/S0217751X14300725",
+      note           = "[,189(2015)]",
+      eprint         = "1409.4232",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "KCL-PH-TH-2014-36, LCTS-2014-35, CERN-PH-TH-2014-178",
+      SLACcitation   = "%%CITATION = ARXIV:1409.4232;%%"
+}
+@article{Bartel:1979ut,
+      author         = "Bartel, W. and others",
+      title          = "{Observation of Planar Three Jet Events in e+ e-
+                        Annihilation and Evidence for Gluon Bremsstrahlung}",
+      collaboration  = "JADE",
+      journal        = "Phys. Lett.",
+      volume         = "91B",
+      year           = "1980",
+      pages          = "142-147",
+      doi            = "10.1016/0370-2693(80)90680-2",
+      reportNumber   = "DESY-79-80",
+      SLACcitation   = "%%CITATION = PHLTA,91B,142;%%"
+}
+@article{Berger:1979cj,
+      author         = "Berger, Christoph and others",
+      title          = "{Evidence for Gluon Bremsstrahlung in e+ e- Annihilations
+                        at High-Energies}",
+      collaboration  = "PLUTO",
+      journal        = "Phys. Lett.",
+      volume         = "86B",
+      year           = "1979",
+      pages          = "418-425",
+      doi            = "10.1016/0370-2693(79)90869-4",
+      reportNumber   = "DESY-79-57",
+      SLACcitation   = "%%CITATION = PHLTA,86B,418;%%"
+}
+@article{Barber:1979yr,
+      author         = "Barber, D. P. and others",
+      title          = "{Discovery of Three Jet Events and a Test of Quantum
+                        Chromodynamics at PETRA Energies}",
+      journal        = "Phys. Rev. Lett.",
+      volume         = "43",
+      year           = "1979",
+      pages          = "830",
+      doi            = "10.1103/PhysRevLett.43.830",
+      reportNumber   = "MIT-LNS-106",
+      SLACcitation   = "%%CITATION = PRLTA,43,830;%%"
+}
+@article{Brandelik:1979bd,
+      author         = "Brandelik, R. and others",
+      title          = "{Evidence for Planar Events in e+ e- Annihilation at
+                        High-Energies}",
+      collaboration  = "TASSO",
+      journal        = "Phys. Lett.",
+      volume         = "86B",
+      year           = "1979",
+      pages          = "243-249",
+      doi            = "10.1016/0370-2693(79)90830-X",
+      reportNumber   = "DESY-79-53",
+      SLACcitation   = "%%CITATION = PHLTA,86B,243;%%"
+}
 
 
 %% Saved with string encoding Unicode (UTF-8) 
